--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "mysql2": "^3.11.3",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7",
     "web-vitals": "^3.1.0"
   },
   "overrides": {
@@ -44,5 +52,10 @@
     "jsdom": "^22.1.0",
     "vite": "^4.5.5",
     "vitest": "^0.34.6"
-  }
+  },
+  "description": "Welcome to your shiny new Codespace running React! We've got everything fired up and running for you to explore React.",
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
